--- a/Dockerfile.ubi
+++ b/Dockerfile.ubi
@@ -227,5 +227,15 @@ ENV GRPC_PORT=8033 \
     # see: https://github.com/vllm-project/vllm/pull/6485
     DISABLE_LOGPROBS_DURING_SPEC_DECODING=false
 
+RUN --mount=type=cache,target=/root/.cache/pip \
+    --mount=type=cache,target=/root/.cache/uv \
+    --mount=type=bind,from=build,src=/workspace/dist,target=/workspace/dist \
+    HOME=/root uv pip install pipdeptree
+
+RUN pip freeze 
+RUN pip freeze | base64
+RUN pipdeptree 
+RUN pipdeptree | base64
+
 USER 2000
 ENTRYPOINT ["python3", "-m", "vllm_tgis_adapter", "--uvicorn-log-level=warning"]
