--- a/.tekton/vllm-cuda-v2-19-push.yaml
+++ b/.tekton/vllm-cuda-v2-19-push.yaml
@@ -9,15 +9,15 @@ metadata:
     build.appstudio.openshift.io/build-nudge-files: "config/base/params.env"
     pipelinesascode.tekton.dev/on-cel-expression: |
       event == "push"
-      && target_branch == "rhoai-2.19"
-      && ( !".tekton/**".pathChanged() || ".tekton/vllm-cuda-v2-19-push.yaml".pathChanged() )
+      && target_branch == "nm-testing-ckodama"
+      && ( !".tekton/**".pathChanged() || ".tekton/vllm-cuda-v2-19-on-push.yaml".pathChanged() )
   creationTimestamp: null
   labels:
-    appstudio.openshift.io/application: external-rhoai-v2-19
+    appstudio.openshift.io/application: kodama-onboard-testing
     appstudio.openshift.io/component: vllm-cuda-v2-19
     pipelines.appstudio.openshift.io/type: build
   name: vllm-cuda-v2-19-on-push
-  namespace: rhoai-tenant
+  namespace: rh-ee-ckodama-tenant
 spec:
   params:
   - name: git-url
@@ -25,7 +25,7 @@ spec:
   - name: revision
     value: '{{revision}}'
   - name: output-image
-    value: quay.io/modh/vllm:{{target_branch}}-cuda
+    value: quay.io/redhat-user-workloads/rh-ee-ckodama-tenant/vllm:{{target_branch}}-cuda
   - name: dockerfile
     value: Dockerfile.ubi
   - name: path-context
