--- a/Dockerfile.ubi
+++ b/Dockerfile.ubi
@@ -52,79 +52,79 @@ RUN microdnf install -y \
 
 
 
-## Python cuda base #################################################################
-FROM cuda-base AS python-cuda-base
-
-ENV VIRTUAL_ENV=/opt/vllm
-ENV PATH="$VIRTUAL_ENV/bin:$PATH"
-
-# install cuda and common dependencies
-RUN --mount=type=cache,target=/root/.cache/pip \
-    --mount=type=cache,target=/root/.cache/uv \
-    --mount=type=bind,source=requirements-common.txt,target=requirements-common.txt \
-    --mount=type=bind,source=requirements-cuda.txt,target=requirements-cuda.txt \
-    uv pip install \
-        -r requirements-cuda.txt
-
-
-## Development #################################################################
-FROM python-cuda-base AS dev
-
-# install build and runtime dependencies
-RUN --mount=type=cache,target=/root/.cache/pip \
-    --mount=type=cache,target=/root/.cache/uv \
-    --mount=type=bind,source=requirements-common.txt,target=requirements-common.txt \
-    --mount=type=bind,source=requirements-cuda.txt,target=requirements-cuda.txt \
-    --mount=type=bind,source=requirements-dev.txt,target=requirements-dev.txt \
-    --mount=type=bind,source=requirements-lint.txt,target=requirements-lint.txt \
-    --mount=type=bind,source=requirements-test.txt,target=requirements-test.txt \
-    uv pip install \
-        -r requirements-cuda.txt \
-        -r requirements-dev.txt
-
-## Builder #####################################################################
-FROM dev AS build
-
-# install build dependencies
-RUN --mount=type=cache,target=/root/.cache/pip \
-    --mount=type=cache,target=/root/.cache/uv \
-    --mount=type=bind,source=requirements-build.txt,target=requirements-build.txt \
-    uv pip install -r requirements-build.txt
-
-# install compiler cache to speed up compilation leveraging local or remote caching
-# git is required for the cutlass kernels
-RUN rpm -ivh https://dl.fedoraproject.org/pub/epel/epel-release-latest-9.noarch.rpm && rpm -ql epel-release && microdnf install -y git ccache && microdnf clean all
-
-COPY . .
-
-ARG TORCH_CUDA_ARCH_LIST
-ENV TORCH_CUDA_ARCH_LIST=$TORCH_CUDA_ARCH_LIST
-ARG vllm_fa_cmake_gpu_arches
-ENV VLLM_FA_CMAKE_GPU_ARCHES=${vllm_fa_cmake_gpu_arches}
-
-# max jobs used by Ninja to build extensions
-ARG max_jobs=2
-ENV MAX_JOBS=${max_jobs}
-# number of threads used by nvcc
-ARG nvcc_threads=8
-ENV NVCC_THREADS=$nvcc_threads
-# make sure punica kernels are built (for LoRA)
-ENV VLLM_INSTALL_PUNICA_KERNELS=1
-
-# Make sure the cuda environment is in the PATH
-ENV PATH=/usr/local/cuda/bin:$PATH
-
-ENV CCACHE_DIR=/root/.cache/ccache
-RUN --mount=type=cache,target=/root/.cache/ccache \
-    --mount=type=cache,target=/root/.cache/pip \
-    --mount=type=cache,target=/root/.cache/uv \
-    --mount=type=bind,src=.git,target=/workspace/.git \
-    env CFLAGS="-march=haswell" \
-        CXXFLAGS="$CFLAGS $CXXFLAGS" \
-        CMAKE_BUILD_TYPE=Release \
-        python3 setup.py bdist_wheel --dist-dir=dist
-
-#################### libsodium Build IMAGE ####################
+# ## Python cuda base #################################################################
+# FROM cuda-base AS python-cuda-base
+# 
+# ENV VIRTUAL_ENV=/opt/vllm
+# ENV PATH="$VIRTUAL_ENV/bin:$PATH"
+# 
+# # install cuda and common dependencies
+# RUN --mount=type=cache,target=/root/.cache/pip \
+#     --mount=type=cache,target=/root/.cache/uv \
+#     --mount=type=bind,source=requirements-common.txt,target=requirements-common.txt \
+#     --mount=type=bind,source=requirements-cuda.txt,target=requirements-cuda.txt \
+#     uv pip install \
+#         -r requirements-cuda.txt
+# 
+# 
+# ## Development #################################################################
+# FROM python-cuda-base AS dev
+# 
+# # install build and runtime dependencies
+# RUN --mount=type=cache,target=/root/.cache/pip \
+#     --mount=type=cache,target=/root/.cache/uv \
+#     --mount=type=bind,source=requirements-common.txt,target=requirements-common.txt \
+#     --mount=type=bind,source=requirements-cuda.txt,target=requirements-cuda.txt \
+#     --mount=type=bind,source=requirements-dev.txt,target=requirements-dev.txt \
+#     --mount=type=bind,source=requirements-lint.txt,target=requirements-lint.txt \
+#     --mount=type=bind,source=requirements-test.txt,target=requirements-test.txt \
+#     uv pip install \
+#         -r requirements-cuda.txt \
+#         -r requirements-dev.txt
+# 
+# ## Builder #####################################################################
+# FROM dev AS build
+# 
+# # install build dependencies
+# RUN --mount=type=cache,target=/root/.cache/pip \
+#     --mount=type=cache,target=/root/.cache/uv \
+#     --mount=type=bind,source=requirements-build.txt,target=requirements-build.txt \
+#     uv pip install -r requirements-build.txt
+# 
+# # install compiler cache to speed up compilation leveraging local or remote caching
+# # git is required for the cutlass kernels
+# RUN rpm -ivh https://dl.fedoraproject.org/pub/epel/epel-release-latest-9.noarch.rpm && rpm -ql epel-release && microdnf install -y git ccache && microdnf clean all
+# 
+# COPY . .
+# 
+# ARG TORCH_CUDA_ARCH_LIST
+# ENV TORCH_CUDA_ARCH_LIST=$TORCH_CUDA_ARCH_LIST
+# ARG vllm_fa_cmake_gpu_arches
+# ENV VLLM_FA_CMAKE_GPU_ARCHES=${vllm_fa_cmake_gpu_arches}
+# 
+# # max jobs used by Ninja to build extensions
+# ARG max_jobs=2
+# ENV MAX_JOBS=${max_jobs}
+# # number of threads used by nvcc
+# ARG nvcc_threads=8
+# ENV NVCC_THREADS=$nvcc_threads
+# # make sure punica kernels are built (for LoRA)
+# ENV VLLM_INSTALL_PUNICA_KERNELS=1
+# 
+# # Make sure the cuda environment is in the PATH
+# ENV PATH=/usr/local/cuda/bin:$PATH
+# 
+# ENV CCACHE_DIR=/root/.cache/ccache
+# RUN --mount=type=cache,target=/root/.cache/ccache \
+#     --mount=type=cache,target=/root/.cache/pip \
+#     --mount=type=cache,target=/root/.cache/uv \
+#     --mount=type=bind,src=.git,target=/workspace/.git \
+#     env CFLAGS="-march=haswell" \
+#         CXXFLAGS="$CFLAGS $CXXFLAGS" \
+#         CMAKE_BUILD_TYPE=Release \
+#         python3 setup.py bdist_wheel --dist-dir=dist
+# 
+# #################### libsodium Build IMAGE ####################
 FROM base as libsodium-builder
 
 RUN microdnf install -y gcc gzip \
