--- a/.tekton/ckodama-vllm-rocm-v2-19-push.yaml
+++ b/.tekton/ckodama-vllm-rocm-v2-19-push.yaml
@@ -9,15 +9,15 @@ metadata:
     build.appstudio.openshift.io/build-nudge-files: "config/base/params-vllm-rocm.env"
     pipelinesascode.tekton.dev/on-cel-expression: |
       event == "push"
-      && target_branch == "rhoai-2.19"
+      && target_branch == "nm-testing-ckodama"
       && ( !".tekton/**".pathChanged() || ".tekton/vllm-rocm-v2-19-push.yaml".pathChanged() )
   creationTimestamp: null
   labels:
-    appstudio.openshift.io/application: external-rhoai-v2-19
+    appstudio.openshift.io/application: kodama-onboard-testing
     appstudio.openshift.io/component: vllm-rocm-v2-19
     pipelines.appstudio.openshift.io/type: build
-  name: vllm-rocm-v2-19-on-push
-  namespace: rhoai-tenant
+  name: ckodama-vllm-rocm-v2-19-on-push
+  namespace: rh-ee-ckodama-tenant
 spec:
   timeouts:
     pipeline: 8h
@@ -27,7 +27,7 @@ spec:
   - name: revision
     value: '{{revision}}'
   - name: output-image
-    value: quay.io/modh/vllm:{{target_branch}}-rocm
+    value: quay.io/redhat-user-workloads/rh-ee-ckodama-tenant/vllm-cuda-v2-19:{{target_branch}}
   - name: dockerfile
     value: Dockerfile.rocm.ubi
   - name: path-context
@@ -73,28 +73,6 @@ spec:
         - name: kind
           value: task
         resolver: bundles
-    - name: send-slack-notification
-      params:
-      - name: message
-        value: "$(tasks.rhoai-init.results.slack-message-failure-text)"
-      - name: secret-name
-        value: rhoai-konflux-secret
-      - name: key-name
-        value: slack-webhook
-      taskRef:
-        params:
-        - name: name
-          value: slack-webhook-notification
-        - name: bundle
-          value: quay.io/konflux-ci/tekton-catalog/task-slack-webhook-notification:0.1@sha256:dc17b70633363d78414b8c06dc1660d25742935f106a6116995638e1210c2730
-        - name: kind
-          value: task
-        resolver: bundles
-      when:
-      - input: $(tasks.status)
-        operator: in
-        values:
-        - "Failed"  
     params:
     - description: Source Repository URL
       name: git-url
@@ -172,49 +150,6 @@ spec:
       name: CHAINS-GIT_COMMIT
       value: $(tasks.clone-repository.results.commit)
     tasks:
-    - name: rhoai-init
-      params:
-      - name: pipelinerun-name
-        value: "$(context.pipelineRun.name)"
-      taskSpec:
-        results:
-        - description: Notification text to be posted to slack
-          name: slack-message-failure-text
-        steps:
-        - image: quay.io/rhoai-konflux/alpine:latest
-          name: rhoai-init
-          env:
-          - name: slack_message
-            valueFrom:
-              secretKeyRef:
-                name: rhoai-konflux-secret
-                key: slack-component-failure-notification
-          script: |
-            pipelinerun_name=$(params.pipelinerun-name)
-            echo "pipelinerun_name = $pipelinerun_name"
-            
-            target_branch={{target_branch}}
-            echo "target_branch = $target_branch"
-
-            application_name=${target_branch/rhoai-/}
-            echo "application-name = $application_name"
-            
-            application_name=rhoai-v${application_name/./-}
-            echo "application-name = $application_name"
-
-            component_name=${pipelinerun_name/-on-*/}
-            echo "component-name = $component_name"
-
-            KONFLUX_SERVER="https://console.redhat.com"
-            build_url="${KONFLUX_SERVER}/application-pipeline/workspaces/rhoai/applications/${application_name}/pipelineruns/${pipelinerun_name}/logs"
-
-            build_time="$(date +%Y-%m-%dT%H:%M:%S)"
-
-            slack_message=${slack_message/__BUILD__URL__/$build_url}
-            slack_message=${slack_message/__PIPELINERUN__NAME__/$pipelinerun_name}
-            slack_message=${slack_message/__BUILD__TIME__/$build_time}
-
-            echo -en "${slack_message}" > "$(results.slack-message-failure-text.path)"
     - name: init
       params:
       - name: image-url
@@ -232,8 +167,6 @@ spec:
         - name: kind
           value: task
         resolver: bundles
-      runAfter:
-      - rhoai-init
     - name: clone-repository
       params:
       - name: url
