--- a/Dockerfile.rocm.ubi
+++ b/Dockerfile.rocm.ubi
@@ -1,16 +1,12 @@
 ## Global Args ##################################################################
-ARG BASE_UBI_IMAGE_TAG=9.5-1741850109
-ARG PYTHON_VERSION=3.12
-# Default ROCm ARCHes to build vLLM for.
-ARG PYTORCH_ROCM_ARCH="gfx908;gfx90a;gfx942;gfx1100"
-ARG MAX_JOBS=12
 
+ARG BASE_UBI_IMAGE_TAG
+
+## Base Layer ##################################################################
 FROM registry.access.redhat.com/ubi9/ubi-minimal:${BASE_UBI_IMAGE_TAG} AS base
-
-ARG PYTHON_VERSION
-
 ENV VIRTUAL_ENV=/opt/vllm
 ENV PATH="$VIRTUAL_ENV/bin:$PATH"
+ARG PYTHON_VERSION
 
 RUN --mount=type=cache,target=/root/.cache/pip \
  microdnf -y update && \
@@ -24,7 +20,7 @@ RUN --mount=type=cache,target=/root/.cache/pip \
 
 
 FROM base AS rocm_base
-ARG ROCM_VERSION=6.3.4
+ARG ROCM_VERSION
 ARG PYTHON_VERSION
 ARG BASE_UBI_IMAGE_TAG
 
@@ -104,6 +100,7 @@ ENV PATH=$PATH:/opt/rocm/bin
 ENV CPLUS_INCLUDE_PATH=$VIRTUAL_ENV/lib/python${PYTHON_VERSION}/site-packages/torch/include:/opt/rocm/include
 
 
+## ROCM Base ###################################################################
 FROM rocm_devel AS build_amdsmi
 
 # Build AMD SMI wheel
@@ -134,41 +131,16 @@ RUN --mount=type=cache,target=/root/.cache/uv \
         GPU_ARCHS="${FA_GFX_ARCHS}" \
         python3 setup.py bdist_wheel --dist-dir=/install
 
-##################################################################################################
-
-FROM rocm_devel AS build_vllm
-ARG PYTORCH_ROCM_ARCH
-ARG PYTHON_VERSION
-ARG MAX_JOBS
-ENV MAX_JOBS=${MAX_JOBS}
-ENV PYTORCH_ROCM_ARCH=${PYTORCH_ROCM_ARCH}
-
-COPY . .
-
-ENV VLLM_TARGET_DEVICE="rocm"
-ENV MAX_JOBS=${MAX_JOBS}
-# Make sure punica kernels are built (for LoRA)
-ENV VLLM_INSTALL_PUNICA_KERNELS=1
-
-RUN --mount=type=cache,target=/root/.cache/ccache \
-    --mount=type=cache,target=/root/.cache/pip \
-    --mount=type=cache,target=/root/.cache/uv \
-    uv pip install -v -U \
-        ninja setuptools-scm>=8 "cmake>=3.26" packaging && \
-    env CFLAGS="-march=haswell" \
-        CXXFLAGS="$CFLAGS $CXXFLAGS" \
-        CMAKE_BUILD_TYPE=Release \
-    python3 setup.py bdist_wheel --dist-dir=dist
 
 #################### libsodium Build IMAGE ####################
 FROM rocm_base as libsodium-builder
 
-RUN microdnf install -y --nodocs gcc gzip tar \
+RUN microdnf install -y gcc gzip tar \
     && microdnf clean all
 
 WORKDIR /usr/src/libsodium
 
-ARG LIBSODIUM_VERSION=1.0.20
+ARG LIBSODIUM_VERSION
 RUN curl -LO https://github.com/jedisct1/libsodium/releases/download/${LIBSODIUM_VERSION}-RELEASE/libsodium-${LIBSODIUM_VERSION}.tar.gz \
     && tar -xzvf libsodium*.tar.gz \
     && rm -f libsodium*.tar.gz \
@@ -181,7 +153,7 @@ RUN CFLAGS="-O3 -Wall -Werror=format-security -Wno-unused-function -Wp,-D_GLIBCX
     make -j $(nproc) && \
     make check
 
-##################################################################################################
+## Release ################################################################################################
 
 FROM rocm_base AS vllm-openai
 ARG MAX_JOBS
@@ -202,7 +174,6 @@ RUN --mount=type=bind,from=libsodium-builder,src=/usr/src/libsodium,target=/usr/
 
 RUN --mount=type=bind,from=build_amdsmi,src=/install,target=/install/amdsmi/ \
     --mount=type=bind,from=build_flashattention,src=/install,target=/install/flashattention \
-    --mount=type=bind,from=build_vllm,src=/workspace/dist,target=/install/vllm/ \
     --mount=type=cache,target=/root/.cache/pip \
     --mount=type=cache,target=/root/.cache/uv \
     export version="$(awk -F. '{print $1"."$2}' <<< $ROCM_VERSION)" && \
@@ -211,8 +182,20 @@ RUN --mount=type=bind,from=build_amdsmi,src=/install,target=/install/amdsmi/ \
         --extra-index-url "https://download.pytorch.org/whl/nightly/rocm${version}" \
         /install/amdsmi/*.whl\
         /install/flashattention/*.whl\
-        /install/vllm/*.whl
 
+# install vllm by running the payload script and then install flashinfer
+
+ARG VLLM_WHEEL_VERSION
+ARG VLLM_WHEEL_INDEX
+ARG FLASHINFER_VERSION
+RUN --mount=type=cache,target=/root/.cache/uv \
+    --mount=type=bind,src=payload,target=/workspace/payload \
+    --mount=type=secret,id=rhel-ai-private-index-auth/BOT_PAT \
+        env BOT_PAT=$(cat /run/secrets/rhel-ai-private-index-auth/BOT_PAT) \
+            VLLM_WHEEL_VERSION=${VLLM_VERSION} \
+            VLLM_WHEEL_INDEX=${VLLM_WHEEL_INDEX} \
+        ./payload/run.sh && \
+        uv pip install "${FLASHINFER_VERSION}" 
 ENV HF_HUB_OFFLINE=1 \
     HOME=/home/vllm \
     # Allow requested max length to exceed what is extracted from the
@@ -246,14 +229,24 @@ WORKDIR /home/vllm
 ENTRYPOINT ["python3", "-m", "vllm.entrypoints.openai.api_server"]
 
 
-FROM vllm-openai as vllm-grpc-adapter
+## TGIS Adapter layer #####################################################################
+FROM vllm-openai AS vllm-grpc-adapter
 
 USER root
-
-RUN --mount=type=cache,target=/root/.cache/pip \
-    --mount=type=cache,target=/root/.cache/uv \
-    --mount=type=bind,from=build_vllm,src=/workspace/dist,target=/install/vllm/ \
-    HOME=/root uv pip install /install/vllm/*.whl vllm-tgis-adapter==0.6.3
+ARG VLLM_VERSION
+ARG VLLM_WHEEL_VERSION
+ARG VLLM_TGIS_ADAPTER_VERSION
+RUN --mount=type=cache,target=/root/.cache/uv \
+    --mount=type=bind,src=payload,target=/workspace/payload \
+    --mount=type=secret,id=rhel-ai-private-index-auth/BOT_PAT \
+    cd /workspace && \
+    ls && \
+    env HOME=/root \
+        BOT_PAT=$(cat /run/secrets/rhel-ai-private-index-auth/BOT_PAT) \
+        VLLM_WHEEL_VERSION=${VLLM_VERSION} \
+        VLLM_TGIS_ADAPTER_VERSION=${VLLM_TGIS_ADAPTER_VERSION} \
+        VLLM_WHEEL_INDEX=${VLLM_WHEEL_INDEX} \
+        ./payload/run.sh
 
 ENV GRPC_PORT=8033 \
     PORT=8000 \
