test fixing power/z builds
also modified cuda pr pipeline to allow for multi arch with separate dockerfiles

--- a/.tekton/vllm-cpu-pull-request.yaml
+++ b/.tekton/vllm-cpu-pull-request.yaml
@@ -7,16 +7,16 @@ metadata:
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     build.appstudio.redhat.com/pull_request_number: '{{pull_request_number}}'
     pipelinesascode.tekton.dev/max-keep-runs: "3"
-    pipelinesascode.tekton.dev/on-comment: "^/build-from-odh"
+    pipelinesascode.tekton.dev/on-comment: "^/build-powerz"
     pipelinesascode.tekton.dev/cancel-in-progress: "true"
     pipelinesascode.tekton.dev/on-cel-expression: |
       false 
   creationTimestamp: null
   labels:
     appstudio.openshift.io/application: external-rhoai-v2-20
-    appstudio.openshift.io/component: vllm-cuda-v2-20
+    appstudio.openshift.io/component: vllm-cpu-v2-20
     pipelines.appstudio.openshift.io/type: build
-  name: vllm-cuda-on-pull-request
+  name: vllm-cpu-on-pull-request
   namespace: rhoai-tenant
 spec:
   timeouts:
@@ -30,10 +30,11 @@ spec:
   - name: revision
     value: '{{revision}}'
   - name: output-image
-    value: quay.io/modh/vllm:on-pr-cuda-{{revision}}
+    value: quay.io/modh/vllm:on-pr-cpu-{{revision}}
   - name: dockerfiles
     value: 
-    - Dockerfile.ubi
+    - Dockerfile.s390x.ubi
+    - Dockerfile.ppc64le.ubi
   - name: path-context
     value: .
   - name: hermetic
@@ -41,7 +42,7 @@ spec:
   - name: build-source-image
     value: false
   - name: build-image-index
-    value: false
+    value: true
   - name: build-args
     value: 
       - max_jobs=6
@@ -52,7 +53,8 @@ spec:
     value: "2147483647"
   - name: build-platforms
     value: 
-      - linux-extra-fast/amd64
+      - linux-large/s390x
+      - linux-large/ppc64le
   taskRunSpecs:
     - pipelineTaskName: ecosystem-cert-preflight-checks
       computeResources:
